<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.school.jakub.trainingplanmaker.controller.trainingPlan.TrainingPlanEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/training_plans_activity_edit_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/training_plans_activity_edit_constraint2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/training_plans_activity_edit_toolbar">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/training_plans_activity_edit_text_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <EditText
                android:id="@+id/training_plans_activity_edit_training_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nazwa planu" />

        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/training_plans_activity_edit_spinner_bodyPart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            style="@style/spinner_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/training_plans_activity_edit_text_wrapper" />

        <Spinner
            android:id="@+id/training_plans_activity_edit_spinner_Exercise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            style="@style/spinner_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_plans_activity_edit_spinner_bodyPart" />

        <Spinner
            android:id="@+id/training_plans_activity_edit_spinner_series_number"
            style="@style/spinner_style"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_plans_activity_edit_spinner_Exercise" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Ilość serii"
            app:layout_constraintBottom_toBottomOf="@+id/training_plans_activity_edit_spinner_series_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/training_plans_activity_edit_spinner_series_number" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Ilość powtórzeń"
            app:layout_constraintBottom_toBottomOf="@+id/training_plans_activity_edit_spinner_repetition_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/training_plans_activity_edit_spinner_repetition_number" />

        <Spinner
            android:id="@+id/training_plans_activity_edit_spinner_repetition_number"
            style="@style/spinner_style"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_plans_activity_edit_spinner_series_number" />

        <Button
            android:id="@+id/training_plans_activity_edit_add_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_style1"
            android:textColor="@color/white"
            android:text="Dodaj"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/training_plans_activity_edit_spinner_repetition_number" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/training_plans_activity_edit_constraint1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5">


        <ListView
            android:id="@+id/training_plans_activity_edit_series_listView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ListView>

    </android.support.constraint.ConstraintLayout>


    <!--<include layout="@layout/content_training_plan_edit" />-->


    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

</android.support.constraint.ConstraintLayout>
