<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/training_background_image3"
    tools:context="com.school.jakub.trainingplanmaker.controller.trainingPlan.TrainingPlans">
<!--android:background="@color/colorPrimaryDark"-->

    <!--<android.support.design.widget.AppBarLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:theme="@style/AppTheme.AppBarOverlay">-->

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?attr/actionBarSize"-->
    <!--android:background="?attr/colorPrimary"-->
    <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    <!--</android.support.design.widget.AppBarLayout>-->

    <include
        android:id="@+id/training_plans_activity_toolbar"
        layout="@layout/activity_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/training_plans_activity_user_plans_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:divider="@null"
        app:layout_constraintBottom_toTopOf="@id/training_plans_activity_add_new_plan_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/training_plans_activity_toolbar">
        <!--android:divider="@android:color/transparent"-->
        <!--android:dividerHeight="5dp">-->

    </ListView>

    <Button
        android:id="@+id/training_plans_activity_add_new_plan_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style1"
        android:textColor="@color/white"
        android:text="Utwórz własny plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/training_plans_activity_user_plans_list" />

    <!--<ImageView-->
        <!--android:id="@+id/training_plans_activity_last_line"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="10dp"-->
        <!--android:background="@color/colorPrimary"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toEndOf="@+id/training_plans_activity_fab" />-->

</android.support.constraint.ConstraintLayout>
